--- a/packages/q3-ui-forms/package.json
+++ b/packages/q3-ui-forms/package.json
@@ -25,6 +25,7 @@
     "moment-timezone": "^0.5.32",
     "notistack": "^1.0.2",
     "q3-ui-dialog": "^1.27.3",
+    "q3-ui-helpers": "^1.27.4",
     "q3-ui-queryparams": "^1.27.4",
     "qs": "^6.9.6",
     "react-dropzone": "^11.3.0",
