--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -18,6 +18,7 @@
     "moment": "2.29.1",
     "prop-types": "^15.7.2",
     "q3-ui-assets": "^1.24.29",
+    "q3-ui-helpers": "^1.27.4",
     "q3-ui-locale": "^1.27.4",
     "react-content-loader": "^6.0.1",
     "react-credit-cards": "^0.8.3",
