--- a/packages/q3-ui-repeater/package.json
+++ b/packages/q3-ui-repeater/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.20",
     "q3-components": "^1.27.7",
     "q3-ui": "^1.27.4",
+    "q3-ui-confirm": "^1.0.0",
     "q3-ui-dialog": "^1.27.3",
     "q3-ui-exports": "^1.27.3",
     "q3-ui-forms": "^1.27.6",
