--- a/packages/q3-ui-confirm/package.json
+++ b/packages/q3-ui-confirm/package.json
@@ -13,7 +13,7 @@
     "q3-ui-forms": "^1.27.10",
     "q3-ui-helpers": "^1.27.10",
     "react-i18next": "11.7.3",
-    "yup": "0.32.8"
+    "yup": "^0.32.8"
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
