--- a/example/package.json
+++ b/example/package.json
@@ -20,6 +20,7 @@
     "q3-blocks": "^1.27.3",
     "q3-components": "^1.27.10",
     "q3-ui": "^1.27.10",
+    "q3-ui-confirm": "1.27.10",
     "q3-ui-assets": "^1.24.29",
     "q3-ui-datatables": "^1.27.10",
     "q3-ui-dialog": "^1.27.3",
