--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -31,6 +31,7 @@
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
     "q3-ui": "^0.2.4",
+    "q3-ui-confirm": "^1.27.10",
     "q3-ui-datatables": "^1.0.0",
     "q3-ui-dialog": "0.8.0",
     "q3-ui-filemanager": "^1.19.34",
