--- a/packages/q3-components/package.json
+++ b/packages/q3-components/package.json
@@ -13,6 +13,7 @@
     "moment": "2.29.1",
     "q3-ui-forms": "^1.27.17",
     "q3-ui-locale": "^1.27.17",
+    "react-diff-viewer": "^3.1.1",
     "react-i18next": "11.7.3",
     "useful-state": "^1.2.0",
     "with-location": "^1.3.8",
