--- a/packages/q3-ui-charts/package.json
+++ b/packages/q3-ui-charts/package.json
@@ -12,6 +12,7 @@
     "color-scheme": "^1.0.1",
     "lodash": "^4.17.20",
     "q3-exports": "^1.9.0",
+    "q3-schema-utils": "^1.14.3",
     "react-i18next": "11.7.3",
     "recharts": "^2.0.4"
   },
