--- a/packages/q3-ui-forms/package.json
+++ b/packages/q3-ui-forms/package.json
@@ -12,7 +12,6 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
-    "@tinymce/tinymce-react": "^3.10.1",
     "axios": "^0.21.1",
     "class-names": "^1.0.0",
     "comparisons": "^2.2.10",
@@ -24,6 +23,7 @@
     "minimatch": "^3.0.4",
     "moment": "2.29.1",
     "moment-timezone": "^0.5.32",
+    "mui-rte": "^1.29.0",
     "notistack": "^1.0.2",
     "q3-ui-dialog": "^1.30.0",
     "q3-ui-queryparams": "^1.27.23",
@@ -32,7 +32,6 @@
     "react-i18next": "11.7.3",
     "react-json-pretty": "^2.2.0",
     "react-window": "^1.8.6",
-    "scriptjs": "^2.5.9",
     "useful-state": "^1.2.3",
     "with-location": "^1.3.8",
     "yup": "^0.32.8"
