--- a/packages/q3-ui-rte/package.json
+++ b/packages/q3-ui-rte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "q3-ui-rte",
-  "version": "1.32.1",
+  "version": "1.0.0",
   "main": "lib/index.js",
   "devDependencies": {
     "jest-localstorage-mock": "^2.4.6",
@@ -13,7 +13,10 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.2.10",
     "draft-js": "^0.11.7",
-    "quill": "^1.3.7"
+    "lodash": "^4.17.20",
+    "quill": "^1.3.7",
+    "quill-paste-smart": "^1.4.5",
+    "react-butterfiles": "^1.3.3"
   },
   "peerDependencies": {
     "prop-types": "^15.7.2",
