--- a/packages/q3-ui-forms/package.json
+++ b/packages/q3-ui-forms/package.json
@@ -23,10 +23,10 @@
     "minimatch": "^3.0.4",
     "moment": "2.29.1",
     "moment-timezone": "^0.5.32",
-    "mui-rte": "^1.29.0",
     "notistack": "^1.0.2",
     "q3-ui-dialog": "^1.30.0",
     "q3-ui-queryparams": "^1.32.0",
+    "q3-ui-rte": "^1.0.0",
     "qs": "^6.9.6",
     "react-dropzone": "^11.3.0",
     "react-i18next": "11.7.3",
