--- a/packages/q3-ui-permissions/package.json
+++ b/packages/q3-ui-permissions/package.json
@@ -3,8 +3,9 @@
   "version": "1.34.5",
   "main": "lib/index.js",
   "dependencies": {
+    "comparisons": "^2.2.10",
     "js-cookie": "^2.2.1",
-    "minimatch": "^3.0.4",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2"
   },
   "peerDependencies": {
