--- a/packages/q3-ui-notifications/package.json
+++ b/packages/q3-ui-notifications/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
+    "q3-ui-helpers": "^1.36.1",
     "react": "^17.0.1",
     "useful-state": "^1.2.3"
   }
