style: optimize mobile

--- a/example/package.json
+++ b/example/package.json
@@ -12,13 +12,14 @@
     "color-scheme": "^1.0.1",
     "file-saver": "^2.0.5",
     "gatsby": "^2.27.5",
-    "gatsby-theme-q3": "^1.36.7",
+    "gatsby-theme-q3": "^1.19.10",
     "i18next": "^19.8.4",
     "prop-types": "^15.7.2",
     "q3-admin": "^1.36.12",
     "q3-blocks": "^1.35.0",
     "q3-components": "^1.36.14",
     "q3-ui": "^1.36.12",
+    "q3-ui-audit": "^1.0.0",
     "q3-ui-assets": "^1.28.0",
     "q3-ui-confirm": "^1.36.14",
     "q3-ui-datatables": "^1.36.12",
