--- a/packages/q3-ui-dialog/package.json
+++ b/packages/q3-ui-dialog/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "react-draggable": "^4.4.3",
     "react-i18next": "11.7.3",
     "useful-state": "^1.2.3"
   },
