--- a/packages/q3-ui-emaileditor/package.json
+++ b/packages/q3-ui-emaileditor/package.json
@@ -9,9 +9,12 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "axios": "^0.21.1",
     "codemirror": "^5.63.0",
     "js-beautify": "^1.14.0",
     "lodash": "^4.17.20",
+    "q3-ui-assets": "^1.28.0",
+    "q3-ui-helpers": "^1.38.3",
     "q3-ui-rest": "^1.38.5"
   },
   "peerDependencies": {
