--- a/gatsby-theme-q3/package.json
+++ b/gatsby-theme-q3/package.json
@@ -18,8 +18,10 @@
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@contentful/rich-text-types": "^14.1.2",
+    "@reach/router": "^1.3.4",
     "add": "^2.0.6",
     "babel-preset-gatsby": "^0.12.0",
+    "gatsby": "2.29.1",
     "gatsby-image": "^2.11.0",
     "gatsby-link": "^2.6.1",
     "gatsby-plugin-canonical-urls": "^2.10.0",
