--- a/example/package.json
+++ b/example/package.json
@@ -9,8 +9,6 @@
     "@material-ui/styles": "^4.11.3",
     "@reach/router": "^1.3.4",
     "axios": "^0.21.1",
-    "color-scheme": "^1.0.1",
-    "file-saver": "^2.0.5",
     "gatsby": "^2.27.5",
     "gatsby-theme-q3": "^1.19.10",
     "i18next": "^19.8.4",
@@ -35,9 +33,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-i18next": "11.7.3",
-    "recharts": "^2.0.4",
-    "yup": "^0.32.8"
+    "react-i18next": "11.7.3"
   },
   "license": "MIT",
   "scripts": {
