--- a/gatsby-theme-q3/package.json
+++ b/gatsby-theme-q3/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "query-string": "^6.13.8",
+    "react": "^17.0.1",
     "react-share": "^4.3.1",
     "slugify": "^1.4.6",
     "string-replace-webpack-plugin": "^0.1.3",
