--- a/gatsby-theme-q3/package.json
+++ b/gatsby-theme-q3/package.json
@@ -21,7 +21,7 @@
     "@reach/router": "^1.3.4",
     "add": "^2.0.6",
     "babel-preset-gatsby": "^0.12.0",
-    "gatsby": "2.29.1",
+    "gatsby": "^2.27.5",
     "gatsby-image": "^2.11.0",
     "gatsby-link": "^2.6.1",
     "gatsby-plugin-canonical-urls": "^2.10.0",
