--- a/packages/q3-ui-filemanager/package.json
+++ b/packages/q3-ui-filemanager/package.json
@@ -18,12 +18,10 @@
   "dependencies": {
     "alphabetize-object-keys": "^3.0.0",
     "classnames": "^2.2.6",
-    "file-icon-vectors": "^1.0.0",
     "lodash": "^4.17.20",
     "q3-ui": "^1.43.9",
     "q3-ui-helpers": "^1.41.7",
     "react-butterfiles": "^1.3.3",
-    "react-dropzone": "^11.3.0",
-    "react-lottie": "^1.2.3"
+    "react-dropzone": "^11.4.2"
   }
 }
