--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "private": true,
   "license": "MIT",
   "resolutions": {
-    "gatsby": "2.29.1",
-    "notistack": "1.0.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-i18next": "^11.8.4"
+    "react-dom": "^17.0.1"
   },
   "scripts": {
     "postinstall": "yarnw-sync-deps && yarn-deduplicate",
@@ -36,7 +33,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.16.0",
     "@babel/plugin-transform-modules-commonjs": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
-    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-actions": "^6.4.0",
     "@storybook/addon-knobs": "^6.3.1",
     "axios-mock-adapter": "^1.19.0",
     "babel-eslint": "^10.0.3",
@@ -76,24 +73,24 @@
     "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-export-default-from": "^7.16.0",
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
-    "@contentful/rich-text-react-renderer": "^14.1.2",
-    "@contentful/rich-text-types": "^14.1.2",
-    "@material-ui/core": "^4.11.3",
+    "@contentful/rich-text-react-renderer": "^15.6.2",
+    "@contentful/rich-text-types": "^15.7.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/styles": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
     "@reach/router": "^1.3.4",
-    "@storybook/addon-a11y": "^6.3.12",
-    "@storybook/addon-docs": "^6.3.12",
-    "@storybook/addon-viewport": "^6.3.12",
-    "@storybook/react": "^6.3.12",
+    "@storybook/addon-a11y": "^6.4.0",
+    "@storybook/addon-docs": "^6.4.0",
+    "@storybook/addon-viewport": "^6.4.0",
+    "@storybook/react": "^6.4.0",
     "@storybook/storybook-deployer": "^2.8.10",
     "@svgr/webpack": "^5.5.0",
     "add": "^2.0.6",
     "alphabetize-object-keys": "^3.0.0",
     "axios": "^0.24.0",
     "babel-loader": "^8.2.3",
-    "babel-preset-gatsby": "^0.12.0",
+    "babel-preset-gatsby": "^2.2.0",
     "class-names": "^1.0.0",
     "classnames": "^2.2.6",
     "comparisons": "^2.2.10",
@@ -101,27 +98,27 @@
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "flat": "^5.0.2",
-    "gatsby": "^2.27.5",
-    "gatsby-image": "^2.11.0",
-    "gatsby-link": "^2.6.1",
-    "gatsby-plugin-canonical-urls": "^2.10.0",
+    "gatsby": "^4.2.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-link": "^4.2.0",
+    "gatsby-plugin-canonical-urls": "^4.2.0",
     "gatsby-plugin-force-trailing-slashes": "^1.0.5",
-    "gatsby-plugin-manifest": "^2.12.0",
-    "gatsby-plugin-material-ui": "^2.1.9",
-    "gatsby-plugin-netlify": "^2.11.0",
-    "gatsby-plugin-offline": "^3.10.0",
+    "gatsby-plugin-manifest": "^4.2.0",
+    "gatsby-plugin-material-ui": "^4.1.0",
+    "gatsby-plugin-netlify": "^3.14.0",
+    "gatsby-plugin-offline": "^5.2.0",
     "gatsby-plugin-polyfill-io": "^1.1.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-remove-trailing-slashes": "^2.10.0",
-    "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sharp": "^2.14.0",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-react-router-scroll": "^3.2.0",
-    "gatsby-source-contentful": "^4.6.0",
-    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-plugin-react-helmet": "^5.2.0",
+    "gatsby-plugin-remove-trailing-slashes": "^4.2.0",
+    "gatsby-plugin-robots-txt": "^1.6.14",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-sitemap": "^5.2.0",
+    "gatsby-react-router-scroll": "^5.2.0",
+    "gatsby-source-contentful": "^7.0.0",
+    "gatsby-source-filesystem": "^4.2.0",
     "gatsby-theme-q3": "^1.19.10",
-    "gatsby-transformer-sharp": "^2.12.0",
-    "i18next": "^19.8.4",
+    "gatsby-transformer-sharp": "^4.2.0",
+    "i18next": "^21.5.3",
     "is-glob": "^4.0.3",
     "js-cookie": "^3.0.1",
     "js-file-download": "^0.4.12",
@@ -130,8 +127,8 @@
     "material-ui-chip-input": "^1.1.0",
     "micromatch": "^4.0.2",
     "moment": "2.29.1",
-    "moment-timezone": "^0.5.32",
-    "notistack": "^1.0.2",
+    "moment-timezone": "^0.5.34",
+    "notistack": "1.0.10",
     "qs": "^6.9.6",
     "query-string": "^7.0.1",
     "react": "^17.0.1",
