--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -13,7 +13,7 @@
     "lodash": "^4.17.20",
     "micromatch": "^4.0.2",
     "moment": "2.29.1",
-    "notistack": "^1.0.2",
+    "notistack": "1.0.10",
     "prop-types": "^15.7.2",
     "q3-ui-charts": "^1.43.10",
     "react-butterfiles": "^1.3.3",
