--- a/packages/q3-ui-forms/package.json
+++ b/packages/q3-ui-forms/package.json
@@ -8,9 +8,9 @@
   },
   "dependencies": {
     "@date-io/moment": "1.x",
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.2.10",
     "axios": "^0.24.0",
     "class-names": "^1.0.0",
@@ -21,8 +21,8 @@
     "lodash": "^4.17.20",
     "material-ui-chip-input": "^1.1.0",
     "moment": "2.29.1",
-    "moment-timezone": "^0.5.32",
-    "notistack": "^1.0.2",
+    "moment-timezone": "^0.5.34",
+    "notistack": "1.0.10",
     "q3-ui-dialog": "^1.43.10",
     "q3-ui-queryparams": "^1.43.10",
     "q3-ui-rte": "^1.43.10",
