--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "storybook": "set NODE_ENV=development&& start-storybook",
     "upload": "yarn build && lerna publish",
     "deploy": "yarn build && build-storybook --docs",
-    "test": "jest --collectCoverage --silent --runInBand",
+    "test": "jest --collectCoverage --silent ",
     "deploy-storybook": "storybook-to-ghpages -- --out=.out --docs",
     "e2e:develop": "yarn workspace example develop",
     "e2e:stage": "yarn workspace example serve -p 8000",
@@ -33,32 +33,18 @@
     "@babel/plugin-proposal-optional-chaining": "^7.16.0",
     "@babel/plugin-transform-modules-commonjs": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
+    "@rushstack/eslint-patch": "^1.1.0",
     "@storybook/addon-actions": "^6.4.0",
     "@storybook/addon-knobs": "^6.3.1",
     "axios-mock-adapter": "^1.19.0",
-    "babel-eslint": "^10.0.3",
     "babel-jest": "^27.3.1",
-    "babel-plugin-module-resolver": "^4.1.0",
     "cypress": "^9.1.0",
     "cypress-file-upload": "^5.0.8",
     "dotenv": "^10.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "eslint": "^8.3.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-node-3merge": "^1.1.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-3merge": "^1.0.2",
-    "eslint-import-resolver-babel-module": "^5.3.1",
-    "eslint-import-resolver-lerna": "^2.0.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^25.3.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-mdx": "^1.16.0",
-    "eslint-plugin-module-resolver": "^1.4.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
+    "eslint": "^7.32.0",
+    "eslint-config-react-3merge": "^1.1.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
     "jest-localstorage-mock": "^2.4.18",
@@ -82,15 +68,12 @@
     "@reach/router": "^1.3.4",
     "@storybook/addon-a11y": "^6.4.0",
     "@storybook/addon-docs": "^6.4.0",
-    "@storybook/addon-viewport": "^6.4.0",
     "@storybook/react": "^6.4.0",
     "@storybook/storybook-deployer": "^2.8.10",
     "@svgr/webpack": "^5.5.0",
     "add": "^2.0.6",
     "alphabetize-object-keys": "^3.0.0",
     "axios": "^0.24.0",
-    "babel-loader": "^8.2.3",
-    "babel-preset-gatsby": "^2.2.0",
     "class-names": "^1.0.0",
     "classnames": "^2.2.6",
     "comparisons": "^2.2.10",
@@ -100,22 +83,17 @@
     "flat": "^5.0.2",
     "gatsby": "^4.2.0",
     "gatsby-image": "^3.11.0",
-    "gatsby-link": "^4.2.0",
     "gatsby-plugin-canonical-urls": "^4.2.0",
     "gatsby-plugin-force-trailing-slashes": "^1.0.5",
     "gatsby-plugin-manifest": "^4.2.0",
     "gatsby-plugin-material-ui": "^4.1.0",
     "gatsby-plugin-netlify": "^3.14.0",
-    "gatsby-plugin-offline": "^5.2.0",
     "gatsby-plugin-polyfill-io": "^1.1.0",
-    "gatsby-plugin-react-helmet": "^5.2.0",
-    "gatsby-plugin-remove-trailing-slashes": "^4.2.0",
     "gatsby-plugin-robots-txt": "^1.6.14",
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-plugin-sitemap": "^5.2.0",
     "gatsby-react-router-scroll": "^5.2.0",
     "gatsby-source-contentful": "^7.0.0",
-    "gatsby-source-filesystem": "^4.2.0",
     "gatsby-theme-q3": "^1.19.10",
     "gatsby-transformer-sharp": "^4.2.0",
     "i18next": "^21.5.3",
@@ -138,7 +116,7 @@
     "react-dropzone": "^11.4.2",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
-    "react-i18next": "11.7.3",
+    "react-i18next": "11.14.3",
     "react-json-pretty": "^2.2.0",
     "react-lazy-load-image-component": "^1.5.1",
     "react-share": "^4.3.1",
