--- a/gatsby-theme-q3/package.json
+++ b/gatsby-theme-q3/package.json
@@ -3,10 +3,6 @@
   "version": "1.43.10",
   "main": "index.js",
   "license": "MIT",
-  "bin": {
-    "q3": "./bin/deps-sync.js",
-    "material-deps": "./bin/peer-install.js"
-  },
   "peerDependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.5.1",
@@ -25,7 +21,7 @@
     "gatsby-plugin-canonical-urls": "^4.2.0",
     "gatsby-plugin-force-trailing-slashes": "^1.0.5",
     "gatsby-plugin-manifest": "^4.2.0",
-    "gatsby-plugin-material-ui": "^4.1.0",
+    "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-robots-txt": "^1.6.14",
     "gatsby-plugin-sharp": "^4.2.0",
@@ -33,19 +29,13 @@
     "gatsby-source-contentful": "^7.0.0",
     "gatsby-transformer-sharp": "^4.2.0",
     "lodash": "^4.17.20",
+    "process": "^0.11.10",
     "prop-types": "^15.7.2",
     "query-string": "^7.0.1",
     "react": "^17.0.1",
     "react-share": "^4.3.1",
     "slugify": "^1.6.3",
-    "string-replace-webpack-plugin": "^0.1.3",
     "transform-loader": "^0.2.4",
     "yarn": "^1.22.17"
-  },
-  "devDependencies": {
-    "child_process": "^1.0.2",
-    "find-yarn-workspace-root": "^2.0.0",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7"
   }
 }
