--- a/gatsby-theme-q3/package.json
+++ b/gatsby-theme-q3/package.json
@@ -4,19 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "peerDependencies": {
-    "@material-ui/core": "^4.10.0",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.54",
-    "@material-ui/styles": "^4.10.0"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "@reach/router": "^1.3.4",
+    "gatsby": "^4.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "dependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.16.0",
     "@contentful/gatsby-transformer-contentful-richtext": "^13.1.0",
     "@contentful/rich-text-react-renderer": "^15.6.2",
     "@contentful/rich-text-types": "^15.7.0",
-    "@reach/router": "^1.3.4",
     "add": "^2.0.6",
-    "gatsby": "^4.2.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-canonical-urls": "^4.2.0",
     "gatsby-plugin-force-trailing-slashes": "^1.0.5",
@@ -32,7 +34,6 @@
     "process": "^0.11.10",
     "prop-types": "^15.7.2",
     "query-string": "^7.0.1",
-    "react": "^17.0.1",
     "react-share": "^4.3.1",
     "slugify": "^1.6.3",
     "transform-loader": "^0.2.4",
