--- a/packages/q3-blocks/package.json
+++ b/packages/q3-blocks/package.json
@@ -8,15 +8,17 @@
   },
   "dependencies": {
     "class-names": "^1.0.0",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "q3-ui-locale": "^1.43.10",
+    "prop-types": "^15.7.2"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.5.1",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.31",
-    "@reach/router": "^1.2.1",
-    "q3-ui-locale": "^1.43.10",
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "@reach/router": "^1.3.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
