--- a/packages/q3-components/package.json
+++ b/packages/q3-components/package.json
@@ -13,6 +13,7 @@
     "flat": "^5.0.2",
     "lodash": "^4.17.20",
     "moment": "2.29.1",
+    "prop-types": "^15.7.2",
     "q3-ui-forms": "^1.43.10",
     "q3-ui-locale": "^1.43.10",
     "react-diff-viewer": "^3.1.1",
@@ -21,12 +22,13 @@
     "yup": "^0.32.11"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.5.1",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.31",
-    "@reach/router": "^1.2.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "@reach/router": "^1.3.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "gitHead": "34a1cd0b4afe9e624a9d4fcef60490187d8cfbe7"
 }
