--- a/packages/q3-ui-assets/package.json
+++ b/packages/q3-ui-assets/package.json
@@ -3,8 +3,12 @@
   "version": "1.39.0",
   "main": "lib/index.js",
   "peerDependencies": {
-    "@material-ui/core": "^4.4.3",
-    "react": "^16.9.0"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "dependencies": {
     "lodash.get": "^4.4.2",
