--- a/packages/q3-ui-audit/package.json
+++ b/packages/q3-ui-audit/package.json
@@ -6,23 +6,25 @@
     "q3-ui-test-utils": "^1.43.10"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "axios": "^0.24.0",
     "lodash": "^4.17.20",
-    "q3-ui-locale": "^1.43.10",
-    "react-diff-viewer": "^3.1.1",
-    "useful-state": "^1.2.3"
-  },
-  "peerDependencies": {
-    "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "q3-ui-assets": "^1.28.0",
     "q3-ui-forms": "0.6.2",
     "q3-ui-helpers": "^1.0.0",
+    "q3-ui-locale": "^1.43.10",
     "q3-ui-permissions": "^0.2.4",
     "q3-ui-queryparams": "^1.36.13",
     "q3-ui-rest": "^0.2.4",
-    "react": "^16.10.2"
+    "react-diff-viewer": "^3.1.1",
+    "useful-state": "^1.2.3"
+  },
+  "peerDependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
