--- a/packages/q3-ui-cart/package.json
+++ b/packages/q3-ui-cart/package.json
@@ -6,20 +6,22 @@
     "q3-ui-test-utils": "^1.43.10"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
     "class-names": "^1.0.0",
     "lodash": "^4.17.20",
+    "prop-types": "^15.7.2",
     "q3-components": "^1.43.10",
     "q3-ui-locale": "^1.43.10",
     "q3-ui-permissions": "^1.43.10",
     "useful-state": "^1.2.3"
   },
   "peerDependencies": {
-    "@reach/router": "^1.2.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "@reach/router": "^1.3.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "gitHead": "34a1cd0b4afe9e624a9d4fcef60490187d8cfbe7"
 }
