--- a/packages/q3-ui-comments/package.json
+++ b/packages/q3-ui-comments/package.json
@@ -6,9 +6,17 @@
     "q3-ui-test-utils": "^1.43.10"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.10.0",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.54",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.20",
+    "moment": "2.29.1",
     "prop-types": "^15.7.2",
     "q3-ui": "^1.33.6",
     "q3-ui-confirm": "1.33.6",
@@ -19,12 +27,6 @@
     "q3-ui-permissions": "1.27.3",
     "q3-ui-rest": "1.32.0",
     "q3-ui-rte": "1.33.6",
-    "react": "^16.10.2"
-  },
-  "dependencies": {
-    "classnames": "^2.2.6",
-    "lodash": "^4.17.20",
-    "moment": "2.29.1",
     "useful-state": "^1.2.3"
   }
 }
