--- a/packages/q3-ui-confirm/package.json
+++ b/packages/q3-ui-confirm/package.json
@@ -6,8 +6,7 @@
     "q3-ui-test-utils": "^1.43.10"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "prop-types": "^15.7.2",
     "q3-ui": "^1.43.10",
     "q3-ui-dialog": "^1.43.10",
     "q3-ui-forms": "^1.43.10",
@@ -16,7 +15,11 @@
     "yup": "^0.32.11"
   },
   "peerDependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
