--- a/packages/q3-ui-datatables/package.json
+++ b/packages/q3-ui-datatables/package.json
@@ -6,11 +6,9 @@
     "q3-ui-test-utils": "^1.43.10"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
     "@reach/router": "^1.3.4",
     "lodash": "^4.17.20",
+    "prop-types": "^15.7.2",
     "q3-ui": "^1.43.10",
     "q3-ui-exports": "^1.43.10",
     "q3-ui-locale": "^1.43.10",
@@ -19,7 +17,11 @@
     "with-location": "^1.3.8"
   },
   "peerDependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
