--- a/packages/q3-ui-emaileditor/package.json
+++ b/packages/q3-ui-emaileditor/package.json
@@ -6,20 +6,22 @@
     "q3-ui-test-utils": "^1.43.10"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.24.0",
     "codemirror": "^5.64.0",
     "js-beautify": "^1.14.0",
     "lodash": "^4.17.20",
+    "prop-types": "^15.7.2",
     "q3-ui-assets": "^1.39.0",
     "q3-ui-helpers": "^1.43.10",
     "q3-ui-locale": "^1.43.10",
     "q3-ui-rest": "^1.43.10"
   },
   "peerDependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
