--- a/packages/q3-ui-exports/package.json
+++ b/packages/q3-ui-exports/package.json
@@ -6,20 +6,22 @@
     "q3-ui-test-utils": "^1.43.10"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
     "alphabetize-object-keys": "^3.0.0",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "flat": "^5.0.2",
     "lodash": "^4.17.20",
     "micromatch": "^4.0.2",
+    "prop-types": "^15.7.2",
     "q3-ui-locale": "^1.43.10",
     "useful-state": "^1.2.3"
   },
   "peerDependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
