--- a/packages/q3-ui-filemanager/package.json
+++ b/packages/q3-ui-filemanager/package.json
@@ -6,16 +6,18 @@
     "q3-ui-test-utils": "^1.43.10"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.10.0",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.54",
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "dependencies": {
     "alphabetize-object-keys": "^3.0.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.20",
+    "prop-types": "^15.7.2",
     "q3-ui": "^1.43.10",
     "q3-ui-dialog": "1.20.9",
     "q3-ui-helpers": "^1.43.10",
