--- a/packages/q3-ui-forms/package.json
+++ b/packages/q3-ui-forms/package.json
@@ -8,9 +8,6 @@
   },
   "dependencies": {
     "@date-io/moment": "1.x",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.2.10",
     "axios": "^0.24.0",
     "class-names": "^1.0.0",
@@ -23,6 +20,7 @@
     "moment": "2.29.1",
     "moment-timezone": "^0.5.34",
     "notistack": "1.0.10",
+    "prop-types": "^15.7.2",
     "q3-ui-dialog": "^1.43.10",
     "q3-ui-locale": "^1.43.10",
     "q3-ui-queryparams": "^1.43.10",
@@ -36,9 +34,13 @@
     "yup": "^0.32.11"
   },
   "peerDependencies": {
-    "@reach/router": "^1.2.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "@reach/router": "^1.3.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "gitHead": "34a1cd0b4afe9e624a9d4fcef60490187d8cfbe7"
 }
