--- a/packages/q3-ui-helpers/package.json
+++ b/packages/q3-ui-helpers/package.json
@@ -6,14 +6,15 @@
     "q3-ui-test-utils": "^1.43.10"
   },
   "dependencies": {
-    "@reach/router": "^1.3.4",
     "is-glob": "^4.0.3",
     "lodash": "^4.17.20",
-    "moment": "2.29.1"
+    "moment": "2.29.1",
+    "prop-types": "^15.7.2"
   },
   "peerDependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2"
+    "@reach/router": "^1.3.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "gitHead": "34a1cd0b4afe9e624a9d4fcef60490187d8cfbe7"
 }
