--- a/packages/q3-ui-permissions/package.json
+++ b/packages/q3-ui-permissions/package.json
@@ -3,16 +3,17 @@
   "version": "1.43.10",
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^0.24.0",
     "comparisons": "^2.2.10",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.20",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "q3-ui-forms": "^0.2.4"
   },
   "peerDependencies": {
-    "@reach/router": "^1.2.1",
-    "axios": "^0.19.0",
-    "q3-ui-forms": "^0.2.4",
-    "react": "^16.10.2"
+    "@reach/router": "^1.3.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "jest-mock-axios": "^4.4.1",
