--- a/packages/q3-ui-queryparams/package.json
+++ b/packages/q3-ui-queryparams/package.json
@@ -9,12 +9,13 @@
   "dependencies": {
     "flat": "^5.0.2",
     "lodash": "^4.17.20",
+    "prop-types": "^15.7.2",
     "q3-ui-helpers": "^1.43.10",
     "q3-ui-locale": "^1.43.10"
   },
   "peerDependencies": {
-    "@reach/router": "^1.2.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2"
+    "@reach/router": "^1.3.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
