--- a/packages/q3-ui-rest/package.json
+++ b/packages/q3-ui-rest/package.json
@@ -8,16 +8,16 @@
     "q3-ui-test-utils": "^1.43.10"
   },
   "peerDependencies": {
-    "axios": "^0.19.0",
-    "lodash": "^4.17.15",
-    "q3-ui-forms": "^0.2.4",
-    "react": "^16.10.2"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "flat": "^5.0.2",
     "js-file-download": "^0.4.12",
+    "lodash": "^4.17.20",
     "moment-timezone": "^0.5.34",
-    "qs": "^6.9.6",
-    "react-dom": "^17.0.1"
+    "q3-ui-forms": "^0.2.4",
+    "qs": "^6.9.6"
   }
 }
