--- a/packages/q3-ui-rte/package.json
+++ b/packages/q3-ui-rte/package.json
@@ -8,18 +8,19 @@
   },
   "dependencies": {
     "@date-io/moment": "1.x",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@material-ui/pickers": "^3.2.10",
     "browser-image-compression": "^1.0.17",
     "lodash": "^4.17.20",
+    "prop-types": "^15.7.2",
     "quill": "^1.3.7",
     "quill-paste-smart": "^1.4.9",
     "react-butterfiles": "^1.3.3"
   },
   "peerDependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^16.10.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
