--- a/packages/q3-ui/package.json
+++ b/packages/q3-ui/package.json
@@ -8,6 +8,7 @@
     "class-names": "^1.0.0",
     "classnames": "^2.2.6",
     "gatsby-image": "^3.11.0",
+    "i18next": "^21.5.4",
     "is-glob": "^4.0.3",
     "lodash": "^4.17.20",
     "material-ui-chip-input": "^1.1.0",
@@ -31,14 +32,13 @@
     "yup": "^0.32.11"
   },
   "peerDependencies": {
-    "@material-ui/core": "^4.4.3",
-    "@material-ui/icons": "^4.4.3",
-    "@material-ui/lab": "^4.0.0-alpha.31",
-    "@reach/router": "^1.2.1",
-    "i18next": "^17.0.12",
-    "q3-ui-locale": "^1.43.10",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "@reach/router": "^1.3.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "gitHead": "34a1cd0b4afe9e624a9d4fcef60490187d8cfbe7"
 }
