--- a/example/package.json
+++ b/example/package.json
@@ -8,10 +8,8 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
     "@reach/router": "^1.3.4",
-    "axios": "^0.24.0",
     "gatsby": "^4.2.0",
     "gatsby-theme-q3": "^1.19.10",
-    "i18next": "^21.5.4",
     "prop-types": "^15.7.2",
     "q3-admin": "^1.43.10",
     "q3-blocks": "^1.43.10",
@@ -31,8 +29,7 @@
     "q3-ui-rest": "^1.43.10",
     "q3-ui-test-utils": "^1.43.10",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-dom": "^17.0.1"
   },
   "license": "MIT",
   "scripts": {
