--- a/packages/q3-ui-audit/package.json
+++ b/packages/q3-ui-audit/package.json
@@ -10,12 +10,12 @@
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "q3-ui-assets": "^1.28.0",
-    "q3-ui-forms": "0.6.2",
+    "q3-ui-forms": "^1.43.10",
     "q3-ui-helpers": "^1.0.0",
     "q3-ui-locale": "^1.43.10",
-    "q3-ui-permissions": "^0.2.4",
+    "q3-ui-permissions": "^1.43.10",
     "q3-ui-queryparams": "^1.36.13",
-    "q3-ui-rest": "^0.2.4",
+    "q3-ui-rest": "^1.43.10",
     "react-diff-viewer": "^3.1.1",
     "useful-state": "^1.2.3"
   },
