--- a/package.json
+++ b/package.json
@@ -66,8 +66,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
     "@reach/router": "^1.3.4",
-    "@storybook/addon-a11y": "^6.4.0",
-    "@storybook/addon-docs": "^6.4.0",
+    "@storybook/addon-essentials": "^6.4.0",
     "@storybook/react": "^6.4.0",
     "@storybook/storybook-deployer": "^2.8.10",
     "@svgr/webpack": "^5.5.0",
