--- a/packages/q3-ui-comments/package.json
+++ b/packages/q3-ui-comments/package.json
@@ -19,14 +19,14 @@
     "moment": "2.29.1",
     "prop-types": "^15.7.2",
     "q3-ui": "^1.33.6",
-    "q3-ui-confirm": "1.33.6",
-    "q3-ui-dialog": "1.20.9",
-    "q3-ui-forms": "1.33.6",
+    "q3-ui-confirm": "^1.33.6",
+    "q3-ui-dialog": "^1.20.9",
+    "q3-ui-forms": "^1.33.6",
     "q3-ui-locale": "^1.43.10",
-    "q3-ui-helpers": "1.21.0",
-    "q3-ui-permissions": "1.27.3",
-    "q3-ui-rest": "1.32.0",
-    "q3-ui-rte": "1.33.6",
+    "q3-ui-helpers": "^1.21.0",
+    "q3-ui-permissions": "^1.27.3",
+    "q3-ui-rest": "^1.32.0",
+    "q3-ui-rte": "^1.33.6",
     "useful-state": "^1.2.3"
   }
 }
