--- a/packages/q3-blocks/package.json
+++ b/packages/q3-blocks/package.json
@@ -1,16 +1,16 @@
 {
   "name": "q3-blocks",
-  "version": "1.43.10",
+  "version": "2.0.0",
   "main": "lib/index.js",
   "devDependencies": {
     "jest-localstorage-mock": "^2.4.18",
-    "q3-ui-test-utils": "^1.43.10"
+    "q3-ui-test-utils": "^2.0.0"
   },
   "dependencies": {
     "class-names": "^1.0.0",
     "lodash": "^4.17.20",
-    "q3-ui-locale": "^1.43.10",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "q3-ui-locale": "^2.0.0"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
