--- a/packages/q3-ui-filemanager/package.json
+++ b/packages/q3-ui-filemanager/package.json
@@ -1,9 +1,9 @@
 {
   "name": "q3-ui-filemanager",
-  "version": "1.43.10",
+  "version": "2.0.0",
   "main": "lib/index.js",
   "devDependencies": {
-    "q3-ui-test-utils": "^1.43.10"
+    "q3-ui-test-utils": "^2.0.0"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
@@ -18,10 +18,10 @@
     "classnames": "^2.2.6",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
-    "q3-ui": "^1.43.10",
-    "q3-ui-dialog": "1.43.10",
-    "q3-ui-helpers": "^1.43.10",
-    "q3-ui-locale": "^1.43.10",
+    "q3-ui": "^2.0.0",
+    "q3-ui-dialog": "^2.0.0",
+    "q3-ui-helpers": "^2.0.0",
+    "q3-ui-locale": "^2.0.0",
     "react-butterfiles": "^1.3.3",
     "react-dropzone": "^11.4.2"
   }
