--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
+    "@mui/x-data-grid": "^4.0.0",
     "@reach/router": "^1.3.4",
     "@storybook/addon-essentials": "^6.4.0",
     "@storybook/react": "^6.4.0",
