test: auth surrounding new profile and system pages

--- a/gatsby-theme-q3/package.json
+++ b/gatsby-theme-q3/package.json
@@ -33,8 +33,10 @@
     "lodash": "^4.17.20",
     "process": "^0.11.10",
     "prop-types": "^15.7.2",
+    "q3-ui-helpers": "^3.0.2",
     "q3-ui-locale": "^3.1.5",
     "query-string": "^7.0.1",
+    "react-helmet": "^6.1.0",
     "react-share": "^4.3.1",
     "slugify": "^1.6.3",
     "transform-loader": "^0.2.4",
