fix: translate ui selector

--- a/.storybook/settings.json
+++ b/.storybook/settings.json
@@ -172,6 +172,8 @@
       "auditUser": "Although this field displays only user who've modified this resource, not all users have modified all fields. Therefore, this might commonly lead to no results."
     },
     "labels": {
+      "table": "Table",
+      "calendar": "Cal",
       "add": "Add",
       "delete": "Delete",
       "nevermind": "Nevermind",
