refactor: replace date pickers

--- a/.storybook/settings.json
+++ b/.storybook/settings.json
@@ -169,7 +169,16 @@
       "filterByDate": "Will include records up to and on the selected date",
       "filterByOperation": "The operation describes the type of change that occurred",
       "auditTargets": "Select fields to query for changes. Not all fields will have human-friendly translations; however, those in raw form should still be distinguishable. This field will auto-populate if a template has been applied.",
-      "auditUser": "Although this field displays only user who've modified this resource, not all users have modified all fields. Therefore, this might commonly lead to no results."
+      "auditUser": "Although this field displays only user who've modified this resource, not all users have modified all fields. Therefore, this might commonly lead to no results.",
+      "invalidEmail": "Enter valid email",
+      "invalidUrl": "Enter valid URL",
+      "invalidTel": "Enter valid phone number",
+      "invalidPostalCode": "Enter valid postal code",
+      "invalidNumber": "Enter valid number",
+      "invalidDateString": "Enter valid date",
+      "isRequiredInput": "This is a required field",
+      "this is a required field": "This is a required field",
+      "invalidSelection": "Choose an option"
     },
     "labels": {
       "table": "Table",
@@ -233,7 +242,7 @@
       "city": "City",
       "streetLine1": "Street line 1",
       "streetLine2": "Street line 2",
-      "postal": "Postal",
+      "postal": "Postal code",
       "edit": "Edit",
       "reply": "Reply",
       "branch": "Company branch",
