--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -32,6 +32,7 @@
     "q3-ui-confirm": "^3.16.4",
     "q3-ui-datatables": "^3.16.4",
     "q3-ui-dialog": "^3.16.0",
+    "q3-ui-dropdownmenu": "^1.0.0",
     "q3-ui-emaileditor": "^3.16.4",
     "q3-ui-exports": "^3.16.0",
     "q3-ui-filemanager": "^3.16.4",
