--- a/packages/q3-ui-dropdownmenu/package.json
+++ b/packages/q3-ui-dropdownmenu/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "q3-ui-locale": "^3.16.0",
+    "q3-ui-helpers": "^3.16.0",
     "useful-state": "^1.2.3"
   },
   "peerDependencies": {
